# ucs_alg_node

./: .gitignore  Dockerfile  Jenkinsfile  README.md  alg.py  alg_node.py  alg_submitter.py  alg_task.py  alg_wrapper.py  demo.py  docker-compose.yaml  emqx_cli.py  main.py  minio_cli.py  mq.py  pyproject.toml  redis_cli.py  requirements.txt  test_cli.py  utils.py  web_srv.py
cli/: __init__.py  http_cli.py  minio_cli.py  mq_cli.py  mqtt_cli.py  redis_cli.py
src/ucs_alg_node/: __init__.py  alg.py  alg_node.py  alg_node_web.py  alg_result.py  alg_submitter.py  alg_task.py  utils.py  web_srv.py
src/ucs_alg_node/cli/: __init__.py  http_cli.py  minio_cli.py  mq_cli.py  mqtt_cli.py  nsq_cli.py  redis_cli.py
test/: demo.py  emqx_test.py  main.py  minio_test.py  misc_test.py  mqtt_cli_test.py  nsq_test.py  redis_test.py  setup.txt  start_services.sh  task_test.py  test_cli.py  thread_test.py  threadex_test.py
