[project]
name = "ucs_alg_node"
authors = [{name="Lingfeng LIU",email="lingfeng.liu@163.com"}]
version = "0.1.5"
description = "UCS algorithm wrapper service"
readme = "README.md"
requires-python = ">=3.8"
license = {text="Apache-2.0"}
dependencies = [
    "flask",
    "minio",
    "redis",
    "paho-mqtt",
    "pynsq",
    "requests",
    "numpy",
    "psutil"
]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"